--- a/config-server-client-development.properties
+++ b/config-server-client-development.properties
@@ -1,1 +1,1 @@
-msg = Hello world - this is from config server - Development Env ssw edited online
+msg = Hello world - this is from config server - Development Env ssw edited online again check in postman
